# Prism

./: .gitignore  CMakeLists.txt
include/: base.h  mlog.h  utils.h
include/io/: shader.h  texture.h
include/render/: drawcall.h  framework.h  queue.h  resource.h  sync.h
include/transform/: camera.h  helper.h
shaders/: object.ps.hlsl  object.vs.hlsl
src/: main.cpp
src/io/: texture.cpp
src/render/: drawcall.cpp  framework.cpp  queue.cpp  resource.cpp  sync.cpp
src/transform/: camera.cpp
